3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

server/weather.c: change spurious logic in weather_avoid function.
Ryo 2006-08-26

Hopefully fix weather-related bug.
common/object.c: tentatively fix insert_ob_in_map weird behaviour when
 both INS_MAP_LOAD and INS_ABOVE_FLOOR_ONLY are set.
Ryo 2006-08-26

common/object.c, server/time.c: Make generators work properly with multi-tile objects.
    Fixes bugs #1543220 and #1546835 and also allows generators themself to be multi-tile.
Alex Schultz 2006-08-25

check-fragment.am: Add some quotes to avoid problems with spaces appearing
  in macro expansions.
Raphael Quinet 2006-08-25
	
configure, aclocal.m4, utils/config.guess, utils/config.sub,
  utils/ltmain.sh, include/autoconf.h.in, */Makefile.in: regenerated using
  slightly newer versions of libtoolize, aclocal, automake and autoconf.
Raphael Quinet 2006-08-25

configure.ac: add option to disable unit tests, fix incorrect usage of
  AC_ARG_ENABLE for dmalloc, fix some typos.
Raphael Quinet 2006-08-25

common/map.c: static buffers are evil. This resulted in name weirdness, and
 strange results with overlays.
Ryo 2006-08-25

server/server.c: fix a weird name change. Basically, function path_combine_and_normalize
 was called twice while first result was still in use, resulting in weird names.
Ryo 2006-08-23

Fix for bug #1528636 (Invisible player disappears from map view).
 socket/request.c: special case for view's center.
Ryo 2006-08-22

Fix/improve login procedure such that if a player is trying to log in with
the name & correct password of character already on server, terminate old 
connection and let them log in.
---